# x264

./: .gitignore  Makefile.am  acinclude.m4  configure.ac  libx264-uninstalled.pc.in  libx264.pc.in
common/: osdep.h
